--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   	<title>FOOD, LLC</title>
-	<link rel="stylesheet" href="css/bootstrap.min.css">
+   	<title class="text-center">FOOD, LLC</title>
+	<link rel="stylesheet" href="CSS/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="CSS/style.css">
   </head>
 <body>
