--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   	<title class="text-center">FOOD, LLC</title>
+   	<title>FOOD, LLC</title>
 	<link rel="stylesheet" href="CSS/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="CSS/style.css">
   </head>
@@ -53,7 +53,7 @@
   </header>
 
   <div id="main-content" class="container">
-    <h2>Our Menu</h2>
+    <h2 class="text-center">Our Menu</h2>
    
     <div id="home-tiles" class="row">
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
